Istio Sidercar with Ambient mesh/sidecar/sleep-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-v1
  namespace: sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-v1
  template:
    metadata:
      labels:
        app: sleep-v1
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep-v1
      containers:
      - name: sleep-v1
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
