Istio Sidercar with Ambient mesh/sidecar/account-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sidecar
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: sidecar
  labels:
    app: account
    service: account
spec:
  ports:
  - port: 8082
    name: http
    targetPort: 8082
  selector:
    app: account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: sidecar
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: imeshai/banking-account:v3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
