Istio Sidercar with Ambient mesh/sidecar/dashboard-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sidecar
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: sidecar
  labels:
    app: dashboard
    service: dashboard
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: sidecar
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: imeshai/banking-dashboard:v3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
