Istio Sidercar with Ambient mesh/sidecar/profile-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sidecar
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  namespace: sidecar
  labels:
    app: profile
    service: profile
spec:
  ports:
  - port: 8081
    name: http
    targetPort: 8081
  selector:
    app: profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: sidecar
  labels:
    app: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: imeshai/banking-profile:v3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
